# HyperNEAT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demos/: xor.cpp
src/: HyperNEAT.h  activations.cpp  activations.h  brain.cpp  brain.h  genome.cpp  genome.h  hyperparams.h  phenome.cpp  phenome.h  pool.cpp  pool.h  quadtree.cpp  quadtree.h  random.cpp  random.h  species.cpp  species.h
